<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/navigation_variation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="controllers.ui.menu.VariationFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/_minusvariation_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/plusText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/minusText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/variation_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plusText" />

            <TextView
                android:id="@+id/minusText"
                style="@style/titleDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/minusText"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/_minusvariation_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/plusText"
                style="@style/titleDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/plusText"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/variation_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/_minusvariation_recycler_view"
                app:layout_constraintVertical_bias="0.541" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_confirmVariations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/button_add_dish"
            android:overScrollMode="never"
            android:padding="100dp"
            android:src="@drawable/check"
            app:layout_anchor="@id/variation_recycler_view"
            app:layout_anchorGravity="bottom|right|end"
            app:tint="@color/icons"
            card_view:backgroundTint="@color/accent" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

